Added: initial unit tests for the GET's